--- a/src/css/styles.css
+++ b/src/css/styles.css
@@ -1,13 +1,16 @@
 body {
     font-family: Arial, sans-serif;
+    font-weight:bold;
     margin: 0;
     padding: 20px;
+    background-color: peachpuff;
 }
 
 #main {
     background-color: lightgray;
     padding: 20px;
     border-radius: 10px;
+    max-width: 500px;
 }
 
 h1 {
@@ -27,7 +30,7 @@ button {
 
 .terminal-container {
     width: 100%;
-    height: 300px;
+    height: 100px;
     padding: 10px;
     box-sizing: border-box;
 }
