--- a/src/css/styles.css
+++ b/src/css/styles.css
@@ -11,6 +11,7 @@ body {
     padding: 10px;
     border-radius: 10px;
     max-width: 500px;
+    box-shadow: 0 4px 8px 0 rgba(0,0,0,0.3);
 }
 
 h2 {
