--- a/src/css/tabs.css
+++ b/src/css/tabs.css
@@ -30,12 +30,14 @@
     height: 100vh;
     display: flex;
     flex-direction: column;
+    
 }
 
 .tabs {
     padding: 10px;
     background-color: #333;
     color: white;
+    box-shadow: 0 4px 8px 0 rgba(0,0,0,0.5);
 }
 
 .tab-content {
